--- a/src/containers/ChangeDutyRecord/ChangeDutyRecord.scss
+++ b/src/containers/ChangeDutyRecord/ChangeDutyRecord.scss
@@ -7,7 +7,12 @@
   }
 }
 
-.dutyRecords{  
+.dutyJzFColor{
+  font-style: normal;
+  color: $mainColor;
+} 
+
+.dutyRecords{
   section{
     header{
       background: #f2f2f2;
