--- a/src/containers/DatePlanDetail/DatePlanDetail.scss
+++ b/src/containers/DatePlanDetail/DatePlanDetail.scss
@@ -2,43 +2,23 @@
 .datePlanDetail{
   section{
     margin:.1rem $lrmargin;
-    padding: 0 $lrmargin;
-    .DatDetailTitle{
-      border-bottom: 1px solid $borderColor;
-      font-size: .24rem;
-      color: $jzfontColor;
-      padding-top: .26rem;
-      padding-bottom: .15rem;
-      text-align: center;
-      p{
-        padding-top: .1rem;
-        color: $text-color;
-        font-size: .14rem;
-      }
-    }
-    section{
-      margin: 0;
-      header{
-        color: $mainColor;
-        margin-top: .14rem;
-        margin-bottom: .05rem;
-        font-size: .15rem;
-      }
-    }
+    padding: .14rem 0.14rem;
     .addPatientLi{
       font-size: $jzfontSize;
       position: relative;
-      height: .3rem;
-      line-height: .3rem;
+      height: .4rem;
+      line-height: .4rem;
       .leftPlaceholder{
         font-weight: normal;
         width: .8rem;
         position: absolute;
         top:0;
         left:0;
+        color: $jzfontColor;
       }
       div{
         margin-left:.8rem;
+        color: $text-color;
         div{
           position:relative;
         }
@@ -69,6 +49,29 @@
         }
       }
     }
+    .DatDetailTitle{
+      border-bottom: 1px solid $borderColor;
+      font-size: .24rem;
+      color: $jzfontColor;
+      padding-top: .26rem;
+      padding-bottom: .15rem;
+      text-align: center;
+      p{
+        padding-top: .1rem;
+        color: $text-color;
+        font-size: .14rem;
+      }
+    }
+    section{
+      margin: 0;
+      header{
+        color: $mainColor;
+        margin-top: .14rem;
+        margin-bottom: .05rem;
+        font-size: .15rem;
+      }
+    }
+    
   }
   footer{
     margin: 0 .2rem;
