值班对接口

--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -18,6 +18,10 @@
 					margin: .15rem auto 0;
 				}
 			}
+      .navLiThr{
+        background: #7FDFC9;
+        margin: 0 .25rem;
+      }
 			p{
 				padding-top: .1rem;
 				color: $text-color;
