--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,6 +12,7 @@ $xsfontColor: #b4b4b4;
 $jzfontColor: #505050;
 
 $mainColor: #41c299;
+$delBtnColor: #9E9E9E;
 $borderColor: #d8d8d8;
 
 //page margin
@@ -41,7 +42,3 @@ $navi-bg-color: #0087f4;
 
 // border
 $border-color: #ddd;
-
-
-
-
