--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -67,7 +67,7 @@ label{
      border-right: .08rem solid transparent;
 }
 .sanjiao-bt{
-  width: 0; 
+  width: 0;
   border-left: .06rem solid transparent; border-top: .1rem solid #fff;
   border-right: .06rem solid transparent;
 }
@@ -95,6 +95,22 @@ label{
   padding:0;
 }
 .mainBtn:active{
+  opacity: 0.5;
+}
+
+.delBtn{
+  background-color: $delBtnColor;
+  color: #fff;
+  font-size: .16rem;
+  height: .4rem;
+  line-height: .4rem;
+  border-radius: 30px;
+  margin:.2rem 0 0;
+  border: 0px solid $delBtnColor;
+  width: 100%;
+  padding:0;
+}
+.delBtn:active{
   opacity: 0.5;
 }
 
@@ -174,7 +190,7 @@ textarea{
   border-radius: 6px;
 }
 
-//top cardBg 
+//top cardBg
 .topCardBg{
   background-color: #fff;
   border-bottom:1px solid #d8d8d8;
@@ -265,7 +281,7 @@ textarea{
   .DayPicker-Weekday {
     display: table-cell;
     text-align: center;
-    border: 1px solid #d8d8d8;  
+    border: 1px solid #d8d8d8;
     abbr{
       border-bottom: 1px solid transparent;
     }
@@ -325,7 +341,7 @@ textarea{
 
 
 /* other page */
-.datePlanPage{  
+.datePlanPage{
   .DayPicker-Day:focus{
     outline: 2px solid $mainColor !important;
   }
