--- a/src/containers/AddDatePlan/AddDatePlan.scss
+++ b/src/containers/AddDatePlan/AddDatePlan.scss
@@ -64,3 +64,19 @@ textarea{
   width: 100%;
   min-height: 1rem;
 }
+
+
+.dateTimePicker{
+  width: 100%;
+  div{
+    width: 100% !important;
+    input{
+      border-radius: 2px !important;
+      border: 1px solid $borderColor !important;
+      box-shadow: 0 0 0 #fff !important;
+      padding: 0 .06rem !important;
+      height: .36rem;
+      line-height: .36rem;
+    }
+  }
+}
