--- a/src/containers/AddDatePlan/AddDatePlan.scss
+++ b/src/containers/AddDatePlan/AddDatePlan.scss
@@ -77,6 +77,7 @@ textarea{
       padding: 0 .06rem !important;
       height: .36rem;
       line-height: .36rem;
+      color: $text-color;
     }
   }
 }
