--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -370,3 +370,19 @@ textarea{
     outline: none !important;
   }
 }
+
+
+
+/*over bootstrap*/
+.input-group-addon{
+  padding: 0 !important;
+  font-size: 16px;
+  text-align: right;
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  z-index: 100;
+  background: #fff;
+  border: 0px solid #fff;
+  width: 40px;
+}
