--- a/src/containers/AddDatePlan/AddDatePlan.scss
+++ b/src/containers/AddDatePlan/AddDatePlan.scss
@@ -70,6 +70,30 @@ textarea{
   width: 100%;
   div{
     width: 100% !important;
+    ul{
+      padding: 0 !important;
+      li{
+        margin: 0;
+        span{
+          padding: 0 !important;
+          span{
+            font-size: 20px !important;
+          }
+        }
+      }
+      li:first-child{
+        margin: 0;
+        line-height: .2rem;
+        table{
+          width: 96%;
+          margin: 0 auto;
+          th{
+            font-weight: normal !important;
+            text-align: center !important;
+          }
+        }
+      }
+    }
     input{
       border-radius: 2px !important;
       border: 1px solid $borderColor !important;
