--- a/src/containers/AddDatePlan/DateTimePicker.scss
+++ b/src/containers/AddDatePlan/DateTimePicker.scss
@@ -3,10 +3,10 @@
  * https://github.com/Eonasdan/bootstrap-datetimepicker/
  */
 .bootstrap-datetimepicker-widget {
-  top: 0;
-  left: 0;
+  top: 36px !important;
+  left: 0 !important;
   width: 250px;
-  padding: 4px;
+  padding: 0 !important;
   margin-top: 1px;
   z-index: 99999 !important;
   border-radius: 4px;
