--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -317,6 +317,7 @@ textarea{
     color: #fff;
     background: $mainColor;
     border-radius: 50%;
+    width: .24rem;
     height: .24rem;
     line-height: .24rem;
   }
