--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,7 +12,7 @@ $xsfontColor: #b4b4b4;
 $jzfontColor: #505050;
 
 $mainColor: #41c299;
-$delBtnColor: #9E9E9E;
+$delBtnColor: #E45252;
 $borderColor: #d8d8d8;
 
 //page margin
