--- a/src/containers/AddDatePlan/AddDatePlan.scss
+++ b/src/containers/AddDatePlan/AddDatePlan.scss
@@ -58,8 +58,15 @@
         }
       }
     }
-    li.dateTimeFLi{
+    li.dateTimeFLiFirst{
       margin-bottom: 0;
+    }
+    li.dateTimeFLiEnd{
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+    li.liMarginTopZero{
+      margin-top: 0;
     }
   }
 }
