--- a/src/containers/UserProfile/UserProfile.scss
+++ b/src/containers/UserProfile/UserProfile.scss
@@ -16,6 +16,7 @@
       img{
         width:.84rem;
         height: .84rem;
+        border-radius: 50%;
       }
       display: inline-block;
       border-radius: 50%;
