--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -115,6 +115,18 @@ label{
 }
 
 
+.addBigBtn{
+  position: fixed;
+  bottom: 66px;
+  right: 4px;
+  z-index: 100;
+  width: 80px;
+  height: 80px;
+  background: url(../images/addBtn.png);
+  background-size: .8rem;
+}
+
+
 //input
 input, select{
   width: 100%;
