日程bug页面修改

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -21,6 +21,7 @@
 	  border-radius: .06rem;
 	  width: 84%;
 	  margin: 0 auto;
+	  box-shadow: 0 0 8px;
 	  .modalTitle{
 	  	border-radius: .06rem 0.06rem 0 0;
 	  	padding: 0 $lrmargin;
