添加日程开始时间结束时间bug修改／loading修改

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -39,6 +39,11 @@
 	  		font-size: .2rem;
 	  		top: .06rem;
 	  		right: $lrmargin;
+	  		background: url(../../images/sprite.png);
+	  		width: .2rem;
+	  		height: .2rem;
+	  		background-size: 3rem;
+	  		background-position: -.28rem .05rem;
 	  	}
 	  }
 	  .modalSectionSection{
