--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -423,3 +423,43 @@ textarea{
     border-color: $mainColor;
   }
 }
+
+
+
+/*tabs*/
+.tabs{
+
+}
+.tabList{
+  height: .5rem;
+  line-height: .5rem;
+  background: #fff;
+  .ReactTabs__Tab{
+    padding: 0;
+    text-align: center;
+  }
+  .ReactTabs__Tab:focus{
+    box-shadow: 0 0 0 transparent;
+    border-color: transparent;
+  }
+}
+.tabList2 .ReactTabs__Tab{
+  width: 50%;
+}
+.tabList3 .ReactTabs__Tab{
+  width: 33.33%;
+}
+.tabList4 .ReactTabs__Tab{
+  width: 25%;
+}
+.tabListOn, .tabListOn:focus{
+  border-radius: 0 !important;
+  border: 0px solid transparent !important;
+  border-bottom: 2px solid $mainColor !important;
+  color: $mainColor !important;
+  height: .48rem;
+}
+.tabListOn:after{
+  height: 0px !important;
+}
+
