--- a/src/containers/NeedApartment/NeedApartment.scss
+++ b/src/containers/NeedApartment/NeedApartment.scss
@@ -1,128 +1,4 @@
 @import '../../theme/variables.scss';
-.duty{
-  .dutyJzFColor{
-    font-style: normal;
-    color: $mainColor;
-  }
-  .selectMonth{
-    position: absolute;
-    top: .08rem;
-    right: $lrmargin;
-    color: #fff;
-    font-size: $jzjzfontSize;
-    select{
-      background: transparent;
-      border: 0px solid #fff;
-      margin-top: .02rem;
-    }
-    p{
-      position: absolute;
-      top: .12rem;
-      right: 0;
-    }
-    
-    .changeDutyRecord{
-      margin-right: .1rem;
-      margin-top: .054rem;
-      i{
-        width: .16rem;
-        height: .2rem;
-        background: url('../../images/sprite.png');
-        background-position: 0 -.96rem;
-        background-size: 1.6rem;
-        margin-right: .02rem;
-      }
-    }
-  }
-
-
-  .dutyTop {
-    background-color: #fff;
-    margin-bottom: 10px;
-    color: $jzfontColor;
-    font-size: $jzfontSize;
-    text-align: center;
-    .dutyFooterBtn{
-      padding: .1rem $lrmargin;
-      p{
-        margin-top: .1rem;
-      }
-    }
-  }
-}  
-
-.appartDuty .dutyTop table tr td div{
-  height: 1.12rem;
-}
-
-.appItem{
-  height: 1rem;
-}
-.dutyItem{
-  position: relative;
-  min-height: .72rem;
-  .dutyItemDay{
-    padding-top: .08rem;
-    padding-bottom:.16rem;
-    position: relative;
-    z-index: 10;
-  }
-  .dateDay{
-    margin-bottom: .06rem;
-    padding-top: .12rem;
-  }
-  .dateSelf{
-    position: absolute;
-    top: 0;
-    left: .02rem;
-    width: .12rem;
-    height: .24rem;
-    background: url('../../images/sprite.png');
-    background-size: 2rem;
-    background-position: 0 -.3rem;
-    z-index: 10;
-  }
-  .dateAppart{
-    font-size: .12rem;
-    color: $text-color;
-    position: relative;
-    i{
-      float: left;
-      width: .12rem;
-      height: .14rem;
-      color: #fff;
-      background: url('../../images/sprite.png');
-      background-size: 2.4rem;
-      position: absolute;
-      top: 0;
-      left: .03rem;
-    }
-    span{
-      margin-left: .16rem;
-    }
-    i.levelFir{
-      background-position: 0 -.76rem;
-    }
-    i.levelSec{
-      background-position: 0 -.96rem;
-    }
-    i.levelThr{
-      background-position: 0 -1.13rem;
-    }
-    i.levelFour{
-      background-position: 0 -1.30rem;
-    }
-  }
-}
-.dutyItem:focus{
-  outline: 2px solid $mainColor;
-}
-
-.selfDayBg{
-  background: #f2f2f2;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+.needApartListCon{
+  padding: .2rem $lrmargin;
 }
