--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -43,6 +43,8 @@
 	  }
 	  .modalSectionSection{
 	  	padding: $tbmargin $lrmargin;
+	  	max-height: 4.8rem;
+	  	overflow-y: auto;
 	  }
 	  .modalButton{
 	  	border-top: 1px solid $borderColor;
