--- a/src/containers/NeedApartAdd/NeedApartAdd.scss
+++ b/src/containers/NeedApartAdd/NeedApartAdd.scss
@@ -63,3 +63,32 @@ textarea{
     top: 0;
   }
 }
+.baseList:last-child{
+  border-bottom: 0px solid transparent;
+}
+
+.doctorModalCon{
+  margin-top: .1rem;
+  height: 3.6rem;
+  overflow-y: auto; 
+}
+
+.doctorText{
+  border-radius: 2px;
+  display: block;
+  border: 1px solid $borderColor;
+  height: .34rem;
+  padding: 0 .06rem;
+  p{
+    display: inline-block;
+  }
+}
+
+.searchUndo{
+  color: $xsfontColor;
+  font-size: $jzfontSize;
+  padding-top: .1rem;
+  i{
+    margin-right: .06rem;
+  }
+}
