--- a/src/containers/NeedApartment/NeedApartment.scss
+++ b/src/containers/NeedApartment/NeedApartment.scss
@@ -1,4 +1,13 @@
 @import '../../theme/variables.scss';
 .needApartListCon{
   padding: .2rem $lrmargin;
+  margin-bottom: .1rem;
+}
+.needAppart{
+	textarea{
+		background: #f2f2f2;
+		border: 1px solid $borderColor;
+		border-radius: 2px;
+		line-height: .3rem;
+	}
 }
