--- a/src/containers/NeedApartment/NeedApartment.scss
+++ b/src/containers/NeedApartment/NeedApartment.scss
@@ -4,7 +4,7 @@
   margin-bottom: .1rem;
 }
 .needAppart{
-	textarea{
+	.cancelNeedText{
 		background: #f2f2f2;
 		border: 1px solid $borderColor;
 		border-radius: 2px;
