--- a/src/containers/NeedsDetail/NeedsDetail.scss
+++ b/src/containers/NeedsDetail/NeedsDetail.scss
@@ -111,6 +111,17 @@ div, span, p, ul, li, dl, a, input, img, b, button {
         border-radius: 43px;
         background-color: white;
       }
+
+      .cancel {
+        margin: 0;
+        float: right;
+        width: 100%;
+        height: 43px;
+        color: rgba(65,194,153,1);
+        border: 1px solid rgba(65,194,153,1);
+        border-radius: 43px;
+        background-color: white;
+      }
     }
   }
 
