--- a/src/containers/NeedApartmentDetail/NeedApartmentDetail.scss
+++ b/src/containers/NeedApartmentDetail/NeedApartmentDetail.scss
@@ -32,3 +32,10 @@ span{
 .needDetailMargin{
 	margin: .1rem 0;
 }
+.needAppartDetailCardTwo{
+	background: #fff;
+	padding: .14rem .2rem .1rem;
+	background: #fff;
+	border: 1px solid $borderColor;
+	margin: .1rem 0;
+}
