忘记密码样式

--- a/src/containers/ForgetPassword/ForgetPassword.scss
+++ b/src/containers/ForgetPassword/ForgetPassword.scss
@@ -1,6 +1,27 @@
 @import '../../theme/variables.scss';
 .forgetPass{
   padding: 0 .4rem;
+  input{
+  	height: .4rem;
+  	line-height: .4rem;
+  	border: 1px solid $borderColor;
+  	background: #fff;
+  	text-indent: .06rem;
+  	box-sizing: content-box;
+  }
+  .getCaptDiv{
+  	margin-top: .1rem;
+  	input{width: 64%;}
+  	button{
+  		width: 30%;
+  		text-align: center;
+  		color: #fff;
+  		height: .4rem;
+  		line-height: .4rem;
+  		border: 1px solid transparent;
+  		background: $mainColor;
+  	}
+  }
   p{
     padding: .3rem 0 .15rem;
   }
