--- a/src/containers/ResetPassword/ResetPassword.scss
+++ b/src/containers/ResetPassword/ResetPassword.scss
@@ -1,64 +1,15 @@
 @import '../../theme/variables.scss';
-.addPatient{
-  section{
-    margin-top: $tbmargin;
-    .addPatientLi{
-      position: relative;
-      height: .3rem;
-      line-height: .3rem;
-      margin:.1rem .2rem;
-      .leftPlaceholder{
-        font-style: normal;
-        width: .6rem;
-        text-align: right;
-        position: absolute;
-        top:0;
-        left:0;
-      }
-      div{
-        margin-left:.8rem;
-        div{
-          position:relative;
-        }
-        input,div{
-          width: 100%;
-        }
-      }
-      .jietaiInfor{
-        margin-left: .8rem;
-        article{
-          width: 46%;
-          position: relative;
-        }
-      }
-      div.textALi{
-        text-align: center;
-        .SexLi{
-          display: inline-block;
-          dt,dd{
-            height: .3rem;
-            line-height: .3rem;
-            padding: 0 .2rem;
-          }
-          input[type="radio"]{
-            width: auto;
-            margin-right: .06rem;
-          }
-        }
-      }
-    }
-    .addPatientLiFirst{
-      margin-top: .16rem;
-    }
-    .addPatientLiEnd{
-      margin-bottom: .16rem;
-    }
-    .addSurgeryMark{
-      height: auto;
-      margin-bottom: 0;
-    }
+.forgetPass{
+  padding: 0 .4rem;
+  input{
+    height: .4rem;
+    line-height: .4rem;
+    border: 1px solid $borderColor;
+    background: #fff;
+    text-indent: .06rem;
+    box-sizing: content-box;
   }
-  footer{
-    margin: 0 .2rem;
+  p{
+    padding: .3rem 0 .15rem;
   }
 }
