需求详情页代码修改

--- a/src/containers/RateDoctor/RateDoctor.scss
+++ b/src/containers/RateDoctor/RateDoctor.scss
@@ -4,6 +4,13 @@
   padding: 0.1rem;
 }
 
+.needAppartDetailCardTwo{
+  background: #fff;
+  padding: .14rem .2rem .1rem;
+  background: #fff;
+  border: 1px solid $borderColor;
+  margin: .1rem 0;
+}
 
 .invitationDescContainer {
   background-color: #FFFFFF;
