--- a/src/containers/ResetPassword/ResetPassword.scss
+++ b/src/containers/ResetPassword/ResetPassword.scss
@@ -12,4 +12,9 @@
   p{
     padding: .3rem 0 .15rem;
   }
+  footer{
+    text-align: right;
+    color: $mainColor;
+    margin-top: .3rem;
+  }
 }
