--- a/src/containers/ForgetPassword/ForgetPassword.scss
+++ b/src/containers/ForgetPassword/ForgetPassword.scss
@@ -25,4 +25,9 @@
   p{
     padding: .3rem 0 .15rem;
   }
+  footer{
+    text-align: right;
+    color: $mainColor;
+    margin-top: .3rem;
+  }
 }
