--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -4,7 +4,8 @@
   background-color: #f2f2f2;
   height: 100%;
   overflow-y: scroll;
-  margin-bottom: 60px;
+  margin: 0 auto 60px;
+  max-width: 6.4rem;
 }
 
 .footer {
