--- a/src/containers/Opera/Opera.scss
+++ b/src/containers/Opera/Opera.scss
@@ -7,18 +7,21 @@
     font-size: $jzjzfontSize;
     padding: 0 $lrmargin;
     div{
-      p{
-        border-top: .1rem solid #797979;
-        margin-top: .18rem;
-        margin-left: .04rem;
+      .operaSanjiao{
+        border-top: .06rem solid #797979;
+        margin-top: .2rem;
+        margin-left: .06rem;
+        border-left: .04rem solid transparent;
+        border-right: .04rem solid transparent;
       }
     }
     div.operaPicker{
       position: fixed;
-      top: .78rem;
+      top: .9rem;
       right: 0;
       bottom: 0;
       left: 0;
+      display: none;
       section{
         background: #fff;
       }
@@ -30,6 +33,14 @@
         left: 0;
         background: rgba(80, 80, 80, 0.3);
       }
+    }
+    div.operaPicker.operaPickerShow{
+      display: block;
+      animation: btns_show .1s linear;
+    }
+    @keyframes btns_show{
+      0%{ opacity:0; transform:scale(.5, 0);}
+      100%{ opacity:1; transform:scale(1, 1);}
     }
     article{
       font-size: $jzfontSize;
@@ -50,7 +61,6 @@
   }
   section{
     border-top: 1px solid $borderColor;
-    margin: $tbmargin 0;
     header{
       font-size: $jzjzfontSize;
       color: $mainColor;
